完善neo4j配置